--- a/c4db94a4206f44b3a1aafd288c381521.opf/meta.yml
+++ b/c4db94a4206f44b3a1aafd288c381521.opf/meta.yml
@@ -5,7 +5,7 @@ source_metadata:
     4c29e367b12f435fbf5982efb504ac7f:
       base_file: v059.txt
       image_group_id: I1PD95905
-      title: ''
+      title: བྱང་ཆུབ་སེམས་དཔའི་རྣལ་འབྱོར་སྤྱོད་པ་བཞི་བརྒྱ་པའི་རྒྱ་ཆེར་འགྲེལ་པ།
       total_pages: 1913
       volume_number: 60
 vol2fn:
