--- a/DC37444D6.opf/index.yml
+++ b/DC37444D6.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   921e9e1b9128473cbec730bcdb050a51:
     parts: {}
+    work_id: D3865
     span:
-    - vol: 60
+    - base: 38fc
       start: 0
       end: 728255
-    work_id: D3865
